# boxify

./: Cargo.toml  README.md
.github/workflows/: rust.yml
boxify/: Cargo.toml
boxify-macro/: Cargo.toml
boxify-macro/src/: expr_helpers.rs  lib.rs
boxify-tests/: Cargo.toml
boxify-tests/benches/: unaligned_aligned.rs
boxify-tests/src/: compile_tests.rs  lib.rs  unit_tests.rs
boxify/examples/: generics.rs  nested.rs  simple.rs
boxify/src/: lib.rs
examples/: nested.rs
src/: compile_tests.rs  lib.rs
