[package]
name = "boxify-macro"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Otter <chipshort@protonmail.com>"]

[lib]
proc-macro = true

[dependencies]
litrs = { version = "0.4.1", features = ["proc-macro2"] }
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["visit-mut", "full"] }
