[package]
name = "boxify-tests"
version = { workspace = true }
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxify = { path = "../boxify" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "unaligned_aligned"
harness = false
